--- a/part01/ch10_스타벅스예제/css/main.css
+++ b/part01/ch10_스타벅스예제/css/main.css
@@ -12,6 +12,10 @@ img {
   display: block;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* HEADER */
 header {
   background-color: royalblue;
@@ -32,4 +36,53 @@ header .logo {
   bottom: 0;
   left: 0;
   margin: auto;
+  display: none;
+}
+
+header .sub-menu {
+}
+
+header .sub-menu ul.menu {
+  font-family: Arial, sans-serif;
+  display: flex;
+}
+
+header .sub-menu ul.menu li {
+  position: relative;
+}
+
+header .sub-menu ul.menu li::before {
+  content: "";
+  width: 1px;
+  height: 12px;
+  background-color: #e5e5e5;
+  /* position absolute, fixed는 display속성값이 자동으로 block으로 바뀐다. */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+header .sub-menu ul.menu li:first-child::before {
+  content: "";
+  display: none;
+}
+
+header .sub-menu ul.menu li a {
+  padding: 11px 16px;
+  display: block;
+  color: #656565;
+}
+
+header .sub-menu ul.menu li a:hover {
+  color: #000;
+}
+
+header .sub-menu .search {
+}
+
+header .sub-menu .search input {
+}
+
+header .sub-menu .search meterial-icons {
 }
