ch10 - 헤더와 드롭다운 메뉴 - 검색

--- a/part01/ch10_스타벅스예제/css/main.css
+++ b/part01/ch10_스타벅스예제/css/main.css
@@ -1,4 +1,8 @@
 /* COMMON */
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: #333;
   font-size: 16px;
@@ -18,14 +22,14 @@ a {
 
 /* HEADER */
 header {
-  background-color: royalblue;
+  background-color: #f6f5f0;
+  border-bottom: 1px solid #c8c8c8;
 }
 
 header .inner {
   width: 1100px;
   height: 120px;
   margin: 0 auto;
-  background-color: orange;
   position: relative;
 }
 
@@ -36,10 +40,13 @@ header .logo {
   bottom: 0;
   left: 0;
   margin: auto;
-  display: none;
 }
 
 header .sub-menu {
+  position: absolute;
+  top: 10px;
+  right: 0px;
+  display: flex;
 }
 
 header .sub-menu ul.menu {
@@ -79,10 +86,40 @@ header .sub-menu ul.menu li a:hover {
 }
 
 header .sub-menu .search {
+  height: 34px;
+  position: relative;
 }
 
 header .sub-menu .search input {
+  width: 36px;
+  height: 34px;
+  padding: 4px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+  background-color: #fff;
+  color: #777;
+  font-size: 12px;
+  transition: width 0.4s;
 }
 
-header .sub-menu .search meterial-icons {
+header .sub-menu .search input:focus {
+  width: 190px;
+  border-color: #669900;
+}
+
+header .sub-menu .search .material-icons {
+  /* position으로 가운데 배치를 할  경우 height값을 항상 설정해줘야한다. */
+  height: 24px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 5px;
+  margin: auto;
+  transition: opacity 0.4s;
+}
+
+/* search와 focused는 일치 선택자로 선택해야한다. (search이면서 focused인 element선택) */
+header .sub-menu .search.focused .material-icons {
+  opacity: 0;
 }
