ch10 - 요소 슬라이드 - 요소 가운데 배치

--- a/part01/ch10_스타벅스예제/css/main.css
+++ b/part01/ch10_스타벅스예제/css/main.css
@@ -447,3 +447,26 @@ header .badges .badge {
 .notice .notice-line .inner__right .toggle-promotion .material-icons {
   font-size: 30px;
 }
+
+.notice .promotion {
+  height: 693px;
+  background-color: #f6f5ef;
+  position: relative;
+}
+
+.notice .promotion .swiper-container {
+  /* 공간을 계산할 때 사용하는 calc() 함수 요소의 덧셈 곱셈 등 사칙연산을 수행할 수 있다. */
+  /* calc(100% -50%) 형식으로 width의 100% 에서 50px만 뺀 값을 width 값으로 사용할 수 있게 해주는 유용한 함수 */
+  width: calc(819px * 3 + 20px);
+  height: 553px;
+  background-color: orange;
+  text-align: center;
+  font-size: 200px;
+  /* 요소가 항상 화면 가운데에 위치시키기 위해 작성..
+    요소의 시작을 absolute를 사용해서 항상 화면 가운데에서 시작하게 만들고, margin-left값을 -요소넓이의 절반을 지정해주면
+    화면이 커질 경우와, 작아질 경우 항상!!! 화면 가운데에 위치하게 만들 수 있다. */
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  margin-left: -1238.5px;
+}
