--- a/part01/ch10_스타벅스예제/css/main.css
+++ b/part01/ch10_스타벅스예제/css/main.css
@@ -459,9 +459,6 @@ header .badges .badge {
   /* calc(100% -50%) 형식으로 width의 100% 에서 50px만 뺀 값을 width 값으로 사용할 수 있게 해주는 유용한 함수 */
   width: calc(819px * 3 + 20px);
   height: 553px;
-  background-color: orange;
-  text-align: center;
-  font-size: 200px;
   /* 요소가 항상 화면 가운데에 위치시키기 위해 작성..
     요소의 시작을 absolute를 사용해서 항상 화면 가운데에서 시작하게 만들고, margin-left값을 -요소넓이의 절반을 지정해주면
     화면이 커질 경우와, 작아질 경우 항상!!! 화면 가운데에 위치하게 만들 수 있다. */
@@ -469,4 +466,83 @@ header .badges .badge {
   top: 40px;
   left: 50%;
   margin-left: -1238.5px;
+}
+
+.notice .promotion .swiper-slide {
+  opacity: 0.5;
+  transition: opacity 1s;
+  position: relative;
+}
+
+.notice .promotion .swiper-slide-active {
+  opacity: 1;
+}
+
+.notice .promotion .swiper-slide .btn {
+  /* 요소 가운데 정렬하기 위함! 좌우 가운데 정렬 */
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  /* width 값은 btn에 130px로 설정해줬다. */
+}
+
+/* pagination의 기본 속성에 position 값이 설정 되어 있기 때문에 position을 설정하지 않아도 가운데 정렬을 할 수 있다. */
+.notice .promotion .swiper-pagination {
+  bottom: 40px;
+  left: 0;
+  right: 0;
+}
+
+.notice .promotion .swiper-pagination .swiper-pagination-bullet {
+  background-color: transparent;
+  background-image: url("../images/promotion_slide_pager.png");
+  width: 12px;
+  height: 12px;
+  margin-right: 6px;
+  outline: none;
+}
+
+.notice .promotion .swiper-pagination .swiper-pagination-bullet:last-child {
+  margin-right: 0;
+}
+
+.notice .promotion .swiper-pagination .swiper-pagination-bullet-active {
+  background-image: url("../images/promotion_slide_pager_on.png");
+  width: 12px;
+  height: 12px;
+}
+
+.notice .promotion .swiper-prev,
+.notice .promotion .swiper-next {
+  width: 42px;
+  height: 42px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  position: absolute;
+  top: 300px;
+  z-index: 1;
+  cursor: pointer;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+}
+
+.notice .promotion .swiper-prev {
+  left: 50%;
+  margin-left: -480px;
+}
+
+.notice .promotion .swiper-next {
+  right: 50%;
+  margin-right: -480px;
+}
+
+.notice .promotion .swiper-prev:hover,
+.notice .promotion .swiper-next:hover {
+  background-color: #333;
+  color: #fff;
 }
