--- a/part01/ch10_스타벅스예제/css/main.css
+++ b/part01/ch10_스타벅스예제/css/main.css
@@ -553,3 +553,57 @@ header .badges .badge {
   background-color: #333;
   color: #fff;
 }
+
+/* REWARDS */
+.rewards {
+  position: relative;
+}
+
+.rewards .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.rewards .bg-right {
+  width: 50%;
+  height: 100%;
+  background-color: #d5c798;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.rewards .inner {
+  /* position relative COMMON 공통요소에 선언 되어 있음 */
+  background-image: url("../images/rewards.jpg");
+  height: 241px;
+}
+
+.rewards .btn-group {
+  position: absolute;
+  bottom: 24px;
+  right: 0;
+  width: 250px;
+  display: flex;
+  /* 공간이 부족할 경우 줄바꿈을 허용한다. flex-wrap: wrap */
+  flex-wrap: wrap;
+}
+
+.rewards .btn-group .btn.sign-up {
+  margin-right: 10px;
+}
+
+.rewards .btn-group .btn.sign-in {
+  width: 110px;
+}
+
+.rewards .btn-group .btn.gift {
+  margin-top: 10px;
+  /* display flex의 자식 요소들이 사용할 수 있는 속성 flex-grow
+    공간이 남을 경우 쭉 늘어나라 1을 주면 모든 남는 공간을 1을 받은 친구 혼자서 다 받을 수 있다. */
+  flex-grow: 1;
+}
